fixed overflow a little

--- a/scss/_new-album.scss
+++ b/scss/_new-album.scss
@@ -13,6 +13,7 @@
 		height:100%;
 		position: relative;
 		width: 100%;
+		overflow:hidden;
 
 		.instruction {
 			font-size:$large-font-size;
